cmake_minimum_required(VERSION 3.15)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp)
add_executable(test test.cpp )
add_executable(shuzifanzhuan shuzifanzhuan.cpp)
add_executable(huanledetiao.cpp huanledetiao.cpp)
add_executable(suijishu.cpp suijishu.cpp)
add_executable(shuliefenduan.cpp shuliefenduan.cpp)
add_executable(fistsecond.cpp fistsecond.cpp)
add_executable(xunzhaochongfuxiang.cpp xunzhaochongfuxiang.cpp)
add_executable(zuichanglianhao.cpp zuichanglianhao.cpp)
add_executable(cantorbiao.cpp cantorbiao.cpp)
add_executable(jiangxuejin.cpp jiangxuejin.cpp)
add_executable(cantorbiao2.cpp cantorbiao2.cpp)
add_executable(pinshu.cpp pinshu.cpp)
add_executable(duoxiangshi.cpp duoxiangshi.cpp)
add_executable(jiqifanyi.cpp jiqifanyi.cpp)
add_executable(wanjumiti.cpp wanjumiti.cpp)
add_executable(fenshuxianhuading.cpp fenshuxianhuading.cpp)
add_executable(jiangxuejin1.cpp jiangxuejin1.cpp)
add_executable(ruishilun.cpp ruishilun.cpp)
add_executable(mofazhaopian.cpp mofazhaopian.cpp)
add_executable(hebingguozi.cpp hebingguozi.cpp)
add_executable(paiduijieshui.cpp paiduijieshui.cpp)
add_executable(hunheniunai.cpp hunheniunai.cpp)
add_executable(jinianpinfenzu.cpp jinianpinfenzu.cpp)
add_executable(bahuanghou.cpp bahuanghou.cpp)
add_executable(migong.cpp migong.cpp)
add_executable(yuesefu.cpp yuesefu.cpp)
add_executable(zuixiaogongbeishu.cpp zuixiaogongbeishu.cpp)
add_executable(huiwenshu.cpp huiwenshu.cpp)
add_executable(palouti.cpp palouti.cpp)
add_executable(01migong.cpp 01migong.cpp)
add_executable(madebianli.cpp madebianli.cpp)
add_executable(houzhuibiaodashi.cpp houzhuibiaodashi.cpp)
add_executable(kuohaopipei.cpp kuohaopipei.cpp)
add_executable(paizuoyi.cpp paizuoyi.cpp)
add_executable(huaxue.cpp huaxue.cpp)
add_executable(gancaochushou.cpp gancaochushou.cpp)
add_executable(caiyao.cpp caiyao.cpp)
add_executable(fengkuangdecaiyao.cpp fengkuangdecaiyao.cpp)
add_executable(kaixindejinming.cpp kaixindejinming.cpp)
add_executable(zhuangxiangwenti.cpp zhuangxiangwenti.cpp)
add_executable(xiaoAdiancai.cpp xiaoAdiancai.cpp)
add_executable(jinmingdeyusuanfangan.cpp jinmingdeyusuanfangan.cpp)
add_executable(NASAshiwujihua.cpp NASAshiwujihua.cpp)
add_executable(xiaoAfenzubeibao.cpp xiaoAfenzubeibao.cpp)
add_executable(xiaoAfenzubeibao1.cpp xiaoAfenzubeibao1.cpp)
add_executable(yinghua.cpp yinghua.cpp)
add_executable(main.cpp main.cpp)